# cyto-dl

./: .buildinfo  .bumpversion.cfg  .gitignore  .pdm.toml  .pre-commit-config.yaml  .serotiny  BIOIO_ZARR3_DEPENDENCIES.md  LICENSE  Makefile  README.md  ZARR3_COMPATIBILITY.md  aics_im2im.callbacks.callback_utils.html  aics_im2im.callbacks.html  aics_im2im.callbacks.latent_walk.html  aics_im2im.callbacks.model_utils.html  aics_im2im.callbacks.outlier_detection.html  aics_im2im.compile.html  aics_im2im.dataframe.html  aics_im2im.dataframe.readers.html  aics_im2im.dataframe.transforms.filter.html  aics_im2im.dataframe.transforms.group_cols.html  aics_im2im.dataframe.transforms.html  aics_im2im.dataframe.transforms.misc.html  aics_im2im.dataframe.transforms.split.html  aics_im2im.datamodules.czi.html  aics_im2im.datamodules.dataframe.dataframe_datamodule.html  aics_im2im.datamodules.dataframe.dataframe_datamodule_multitask.html  aics_im2im.datamodules.dataframe.grouped_dataframe_datamodule.html  aics_im2im.datamodules.dataframe.html  aics_im2im.datamodules.dataframe.utils.html  aics_im2im.datamodules.folder.html  aics_im2im.datamodules.html  aics_im2im.datamodules.smartcache.html  aics_im2im.datamodules.torchvision.html  aics_im2im.eval.html  aics_im2im.html  aics_im2im.image.html  aics_im2im.image.io.aicsimage_loader.html  aics_im2im.image.io.html  aics_im2im.image.io.monai_bio_reader.html  (+406 more)
.github/workflows/: build-docs.yml  bump.yml  code-quality-main.yaml  code-quality-pr.yaml  create-pr-from-public.yml  create_publish_pr.yaml  create_publish_pr.yml  debug.yml  make-requirements.yml  publish.yml  (+3 more)
_modules/: index.html
_sources/: aics_im2im.callbacks.latent_walk.rst.txt  aics_im2im.callbacks.outlier_detection.rst.txt  aics_im2im.callbacks.rst.txt  aics_im2im.compile.rst.txt  aics_im2im.dataframe.readers.rst.txt  aics_im2im.datamodules.dataframe.dataframe_datamodule.rst.txt  aics_im2im.datamodules.dataframe.grouped_dataframe_datamodule.rst.txt  aics_im2im.datamodules.dataframe.rst.txt  aics_im2im.datamodules.dataframe.utils.rst.txt  aics_im2im.datamodules.rst.txt  aics_im2im.datamodules.smartcache.rst.txt  aics_im2im.datamodules.torchvision.rst.txt  aics_im2im.image.io.aicsimage_loader.rst.txt  aics_im2im.image.io.numpy_reader.rst.txt  aics_im2im.image.io.rst.txt  aics_im2im.image.transforms.bright_sampler.rst.txt  aics_im2im.image.transforms.multiscale_cropper.rst.txt  aics_im2im.image.transforms.project.rst.txt  aics_im2im.image.transforms.rst.txt  aics_im2im.image.transforms.save.rst.txt  aics_im2im.image.transforms.so2_random_rotation.rst.txt  aics_im2im.loggers.rst.txt  aics_im2im.models.base_model.rst.txt  aics_im2im.models.handlers.base_handler.rst.txt  aics_im2im.models.handlers.image_handler.rst.txt  aics_im2im.models.handlers.load_image_patch.rst.txt  aics_im2im.models.handlers.rst.txt  aics_im2im.models.im2im.gan.rst.txt  aics_im2im.models.im2im.multi_task.rst.txt  aics_im2im.models.im2im.rst.txt  aics_im2im.models.im2im.utils.omnipose.rst.txt  aics_im2im.models.im2im.utils.postprocessing.act_thresh_label.rst.txt  aics_im2im.models.im2im.utils.postprocessing.auto_thresh.rst.txt  aics_im2im.models.im2im.utils.postprocessing.dict_to_im.rst.txt  aics_im2im.models.im2im.utils.postprocessing.rst.txt  aics_im2im.models.im2im.utils.rst.txt  aics_im2im.models.im2im.utils.skoots.rst.txt  aics_im2im.models.rst.txt  aics_im2im.models.utils.mlflow.rst.txt  aics_im2im.models.utils.rst.txt  (+334 more)
aics_im2im/: compile.py  eval.py  train.py
configs/: brian_config.yaml  compile.yaml  eval.yaml  train.yaml
cyto_dl/: __init__.py  compile.py  eval.py  train.py  train2.py
cyto_ml/: __init__.py  compile.py  eval.py  train.py
docs/: Makefile  aics_im2im.callbacks.callback_utils.rst  aics_im2im.callbacks.model_utils.rst  aics_im2im.dataframe.rst  aics_im2im.dataframe.transforms.filter.rst  aics_im2im.dataframe.transforms.group_cols.rst  aics_im2im.dataframe.transforms.misc.rst  aics_im2im.dataframe.transforms.rst  aics_im2im.dataframe.transforms.split.rst  aics_im2im.datamodules.czi.rst  aics_im2im.datamodules.dataframe.dataframe_datamodule_multitask.rst  aics_im2im.datamodules.folder.rst  aics_im2im.datamodules.rst  aics_im2im.eval.rst  aics_im2im.image.io.monai_bio_reader.rst  aics_im2im.image.io.ome_zarr_reader.rst  aics_im2im.image.rst  aics_im2im.image.transforms.o2_mask_transform.rst  aics_im2im.image.transforms.resize.rst  aics_im2im.image.transforms.rst  aics_im2im.loggers.mlflow.rst  aics_im2im.models.basic_model.rst  aics_im2im.models.im2im.utils.noise_annealer.rst  aics_im2im.models.im2im.utils.postprocessing.rst  aics_im2im.models.im2im.utils.rst  aics_im2im.models.rst  aics_im2im.models.vae.o2_spharm_vae.rst  aics_im2im.models.vae.priors.abstract_prior.rst  aics_im2im.models.vae.priors.gaussian.rst  aics_im2im.models.vae.priors.identity_prior.rst  aics_im2im.models.vae.priors.joint_prior.rst  aics_im2im.models.vae.so2_image_vae.rst  aics_im2im.models.vae.so2_image_vae.so2_encoder.rst  aics_im2im.models.vae.so2_image_vae.so2_image_vae.rst  aics_im2im.models.vae.so2_image_vae.utils.rst  aics_im2im.models.vae.tabular_vae.rst  aics_im2im.nn.aux_head.rst  aics_im2im.nn.discriminator.rst  aics_im2im.nn.hr_skip.rst  aics_im2im.nn.losses.adversarial_loss.rst  (+23 more)
licenses/: LICENSE
notebooks/: so2_2d_save_contours.ipynb  so2_3d_save_meshes.ipynb
requirements/: all-requirements.txt  docs-requirements.txt  equiv-requirements.txt  omnipose-requirements.txt  pcloud-requirements.txt  requirements.txt  spharm-requirements.txt  test-requirements.txt  torchserve-requirements.txt
scripts/: build_shapenet.py  download_test_data.py  get_heuristic_var.py  get_heuristic_var_v2.py  get_mse_weights.py  make_rotated_dataset.py  publish_bumpver_handler.py  schedule.sh  tag_with_current_version.py  test_classifier.py
src/: eval.py
tests/: conftest.py  test_alternating_batch_sampler.py  test_array_models.py  test_configs.py  test_eval.py  test_gradient_flip.py  test_mlflow_logger.py  test_mnist_datamodule.py  test_polygon_loader.py  test_sweeps.py  test_train.py  torchvision_wrapper.py  utils.py
(+1406 files in other folders)
