[build-system]
requires = ["pdm-pep517>=1.0.0", "numpy>=1.26.0"]
build-backend = "pdm.pep517.api"

[project]
name = "cyto-dl"
version = "0.6.2"
description = """\
  Collection of representation learning models, techniques, callbacks, utils, \
  used to create latent variable models of cell shape, morphology and \
  intracellular organization.\
  """
readme = "README.md"
authors = [
    { name = "Benji Morris", email = "benjamin.morris@alleninstitute.org" },
    { name = "Guilherme Pires", email = "guilherme.pires@alleninstitute.org" },
    { name = "Ritvik Vasan", email = "ritvik.vasan@alleninstitute.org" },
]
dependencies = [
    "hydra-core>=1.3.0",
    "hydra-colorlog>=1.2",
    "hydra-optuna-sweeper>=1.2",
    "torch>=2.5.0",
    "numpy>=1.26.0",
    "matplotlib>=3.9",
    "pandas>=2.2",
    "fire>=0.5",
    "mlflow>=2.18",
    "omegaconf>=2.3",
    "pyarrow>=18.0",
    "pyrootutils>=1.0",
    "PyYAML>=6.0",
    "scikit-learn>=1.5",
    "universal-pathlib>=0.2",
    "ome-zarr>=0.10",
    "anndata>=0.11",
    "monai>=1.5",
    "timm>=1.0.11",
    "tqdm>=4.66",
    "lightning>=2.4",
    "einops>=0.8",
    "edt>=3.0.0",
    "astropy>=6.1",
    "rich",
    "boto3",
    "bioio>=1.5",
    "bioio-base>=1.1",
    "bioio-czi",
    "bioio-ome-tiff",
    "bioio-ome-zarr",
    "bioio-tifffile",
    "tifffile>=2024.8.0",
    "online-stats>=2023",
    "opencv-python>=4.10.0",
    "positional-encodings>=6.0.3",
    "zarr>=2.18",
]
requires-python = ">=3.10,<3.13"

[project.optional-dependencies]
equiv = [
    "lie_learn==0.0.1.post1",
    "escnn>=1.0.11",
    "py3nj>=0.2.1",
    "e3nn>=0.5.4"
]
spharm = [
    "vtk>=9.3",
    "aicscytoparam>=0.1",
    "pyshtools>=4.13",
]
s3 = [
    "boto3>=1.35",
    "s3fs>=2024.10"
]
torchserve = [
    "torchserve>=0.12.0",
    "gorilla>=0.4.0",
]
pcloud = [
    "pyntcloud>=0.3.1",
    "aicsshparam>=0.1.7",
    "torch-geometric>=2.6",
    "point-cloud-utils>=0.30",
    "geomloss>=0.2.6",
    "Ninja>=1.11.1",
    "torchio>=0.20",
]
all = [
    "cyto-dl[equiv,spharm,s3,torchserve,pcloud]",
]
test = [
    "cyto-dl",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
docs = [
    "cyto-dl",
    "furo>=2024.8",
    "m2r2>=0.3.3",
    "sphinx>=7.4",
]


[project.urls]
Homepage = "https://github.com/AllenCellModeling/cyto-dl"

[tool.pdm.build]
includes = ["cyto_dl", "README.md", "LICENSE", "**/*.yaml" ]
excludes = ["**/*.pyc", "**/__pycache__"]

[tool.flake8]
ignore = [
    "E203",
    "E402",
    "W291",
    "W503",
]
max-line-length = 88

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--durations=0",
    "--strict-markers",
    "--doctest-modules",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
log_cli = "True"
markers = [
    "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

# https://pypi.org/project/bumpver
[tool.bumpver]
current_version = "0.6.2"
version_pattern = "MAJOR.MINOR.PATCH[.PYTAGNUM]"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = false # no longer useful to tag here, must happen in create_publish_pr.yaml
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"version.toml" = ['version = "{version}"']
"cyto_dl/__init__.py" = ['__version__ = "{version}"']

[tool.uv]
# lie_learn 0.0.1.post1 has a build-time dependency on numpy that is not declared in its
# metadata. Therefore, we must disable PEP 517 build isolation to install it.
# This means that uv users who want to use equivariant models must install dependencies
# in two steps: `uv sync`, then `uv sync --extra equiv`.
no-build-isolation-package = ["lie_learn"]

# Resolve for Linux and Windows to support CUDA environments
environments = ["sys_platform == 'linux'", "sys_platform == 'win32'"]
